fix header z-index

--- a/src/components/sections/Header/Header.module.scss
+++ b/src/components/sections/Header/Header.module.scss
@@ -5,7 +5,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1000;
+  z-index: 999;
   &_inner {
     max-width: 1130px;
     padding: 0 15px;
